--- a/tags.html
+++ b/tags.html
@@ -4,8 +4,8 @@
 <head>
   <title>Lalasnowby's Blog - Mots-clés</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <link rel="stylesheet" href="<http://renning.github.com>/theme/css/main.css" type="text/css" />
-  <link href="<http://renning.github.com>/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Lalasnowby's Blog - Flux ATOM" />
+  <link rel="stylesheet" href="/theme/css/main.css" type="text/css" />
+  <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Lalasnowby's Blog - Flux ATOM" />
     <script type="text/javascript">
     var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
     document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -20,19 +20,19 @@
 <div id="page">
 
   <header id="header">
-    <h1><a href="<http://renning.github.com>/index.html">Lalasnowby's Blog</a></h1>
+    <h1><a href="/index.html">Lalasnowby's Blog</a></h1>
   </header>
 
 <nav id="menu">
-  <a href="<http://renning.github.com>/index.html">Accueil</a>
-          <a href="<http://renning.github.com>/archives.html">Archives</a>
+  <a href="/index.html">Accueil</a>
+          <a href="/archives.html">Archives</a>
 
 </nav> <!-- /#nav -->
   <section id="content">
 <h2 class="page_title">Liste des mots-clés</h2>
 <ul id="tag_list">
-    <li><h3><a href="<http://renning.github.com>/tag/awesome.html">awesome</a></h3></li>
-    <li><h3><a href="<http://renning.github.com>/tag/thats.html">thats</a></h3></li>
+    <li><h3><a href="/tag/awesome.html">awesome</a></h3></li>
+    <li><h3><a href="/tag/thats.html">thats</a></h3></li>
 </ul>
   </section> <!-- /#content -->
 
@@ -41,7 +41,7 @@
   <div class="widget" id="categories">
     <h2>Catégories</h2>
     <ul>
-          <li ><a href="<http://renning.github.com>/category/yeah.html">yeah</a></li>
+          <li ><a href="/category/yeah.html">yeah</a></li>
         </ul>
   </div>
 
